upgrade to `v1.4` - split up single file for better modularity - increase version of `pyfastatools` to latest version just pushed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "metapyrodigal"
-version = "1.3.1"
+version = "1.4.0"
 authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
 description = "Pyrodigal cli optimized for metagenomic data"
 readme = "README.md"
@@ -18,11 +18,11 @@ dependencies = [
     "pyrodigal == 3.5.2",
     "tqdm >= 4.42",
     "pyrodigal-gv",
-    "pyfastatools>=2",
+    "pyfastatools>=2.2.1",
 ]
 
 [project.scripts]
-pyrodigal = "prodigal:main"
+pyrodigal = "metapyrodigal:main.main"
 
 [project.urls]
 "Homepage" = "https://github.com/cody-mar10/metapyrodigal"
